# gtrack

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: config.ini
src/: data_manager.py  database_manager.py  insert_manager.py  main.py  plot_creator.py  print_manager.py  tmp.py  tmp_data_manager.py  utils.py
src/gtrack/: config_manager.py  filter_manager.py  gtrack.py  insert_manager.py  plot_manager.py  print_manager.py  utils.py
